spade-tests/src/snapshots/spade_tests__integration__namespace_tests__backward_types_can_not_be_put_in_registers.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Ports can not be put in a register
  ┌─ testinput:2:18
  │
2 │     reg(clk) _ = a;
  │                  ^ This is a port
  │
  = ~bool is a port


